# Neuroplastic-Memory

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
context_memory/: __init__.py  api.py  config.py  types.py
context_memory/agents/: llm.py
context_memory/ingestion/: chunker.py  pipeline.py
context_memory/pathfinding/: cache.py  traversal.py
context_memory/storage/: graph.py  relational.py  schemas.py  vector.py
docs/design/: engineering_analysis.md  security_audit.md
test_data/: test_doc.md
tests/: smoke_test.py  test_bulk_ingest.py  test_query.py  test_real_data.py
