[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "neuroplastic-memory"
version = "0.1.0"
description = "A neuroplastic AI memory module — graph-based context retrieval with active pathfinding that learns from every query."
requires-python = ">=3.10"
license = "MIT"
readme = "README.md"
keywords = ["ai", "memory", "knowledge-graph", "rag", "neo4j", "vector-search", "neuroplastic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "litellm>=1.82.0",
    "neo4j>=6.1",
    "qdrant-client>=1.17.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.13.0",
    "aiosqlite>=0.22.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.urls]
Repository = "https://github.com/SANYAM-PANSARI/Neuroplastic-Memory"
